# agentmedha

./: .cursorrules  .env.example  .gitignore  AGENT_TESTING_READY.md  ARCHITECTURE.md  BRANDING.md  CHANGELOG.md  CHANGELOG_2025-11-03.md  COMPLETE_END_TO_END_SUCCESS.md  COMPLETE_TESTING_SUMMARY.md  CONTEXT_ENGINEERING.md  CURRENT_PROGRESS_SUMMARY.md  END_TO_END_TEST_REPORT.md  END_TO_END_TEST_RESULTS.md  ENHANCED_ARCHITECTURE.md  ENVIRONMENT_SETUP_COMPLETE.md  FEATURE_ROADMAP.md  FINAL_SUMMARY.md  FRONTEND_DEMO_SUCCESS.md  GAP_ANALYSIS_AND_ROADMAP.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PRIORITY.md  IMPLEMENTATION_STATUS.md  INDEX.md  INSPIRATION.md  MCP_IMPLEMENTATION_PLAN.md  NEXT_STEPS.md  NORMAL_USER_TESTING_SUCCESS.md  PHASE1_COMPLETE.md  PHASE1_SUBPHASE1A_COMPLETE.md  PHASE2_ADD_SERVER_MODAL_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_CONTEXT_INTEGRATION_COMPLETE.md  PHASE4_1_2_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_CONVERSATIONAL_ANALYTICS_PLAN.md  PHASE4_FINAL_STATUS.md  PHASE4_QUICK_FIX_MIGRATION.md  PHASE4_TESTING_GUIDE.md  (+44 more)
backend/: Dockerfile  README.md  alembic.ini  env.example  pyproject.toml  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 003_semantic_layer.py  004_vector_store.py  005_mcp_servers.py  006_conversation_sessions.py  006_conversation_sessions_fixed.py
backend/app/: main.py
backend/app/agents/: __init__.py  admin_setup_agent.py  discovery_agent.py  sql_agent.py
backend/app/api/v1/: context.py  dependencies.py  router.py
backend/app/api/v1/endpoints/: admin_setup.py  auth.py  chat_query.py  chat_refinement.py  database.py  discover.py  mcp_servers.py  query.py  simple_chat.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: __init__.py  auth.py  database.py  query.py
backend/app/scripts/: __init__.py  create_embeddings.py  seed_semantic_layer.py
backend/app/services/: auth.py  cache.py  context_manager.py  context_optimizer.py  context_retriever.py  database_connector.py  discovery.py  embedding.py  encryption.py  gmail_mcp_server.py  mcp_connectors.py  mcp_manager.py  query_orchestrator.py  rbac.py  schema_manager.py  session_manager.py
backend/app/tests/: README.md  __init__.py  conftest.py  test_agents.py  test_api.py  test_context_system.py  test_phase4_conversational.py  test_services.py
backend/migrations/: 002_add_rbac_and_shared_datasources.sql
docs/: GMAIL_SETUP_GUIDE.md
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: test-login.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddMCPServerModal.tsx  DataVisualization.tsx  Layout.tsx  QueryResult.tsx
frontend/src/pages/: AdminDashboard.tsx  DashboardPage.tsx  DatabasesPage.tsx  LoginPage.tsx  MCPServersPage.tsx  QueryPage.tsx  ResourcesPage.tsx  SimpleChatPage.tsx
frontend/src/services/: api-debug.ts  api.ts
frontend/src/store/: authStore.ts
mcp_servers/gmail/: Dockerfile  gmail_http_server.py  gmail_mcp_server.py  requirements.txt
monitoring/: prometheus.yml
planning/: architecture.md  architecture_status.md  requirements.md  roadmap.md  tech_stack.md
presentations/: EXECUTIVE_PRESENTATION.md  FAQ.md  ONE_PAGER.md  README.md  TECHNICAL_PRESENTATION.md
scripts/: fix_python_version.sh  setup_gmail_oauth.py  start-dev.sh  stop-dev.sh  verify_setup.sh
src/agent_medha/: __init__.py  graph.py  main.py  memory.py  memory_manager.py  server.py  state.py
src/agent_medha/agents/: __init__.py  email_pipeline.py  maya.py  maya_graph.py
src/agent_medha/evals/: baseline.py
src/agent_medha/memory/: __init__.py  base.py  episodic.py  procedural.py  semantic.py  store.py  working.py
src/agent_medha/services/: __init__.py  (+1 more)
tests/: e2e_content_studio.py  e2e_test.py  test_image_gen.py  test_pet_manager.py  test_social_agent.py  test_social_platforms.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/public/: browserconfig.xml  offline.html
ui/scripts/: generate-pwa-icons.js
ui/src/: App.jsx  index.css  main.jsx
(+48 files in other folders)
